--- a/config-example.json
+++ b/config-example.json
@@ -2,7 +2,10 @@
   "mcpServers": {
     "capsule-crm": {
       "command": "node",
-      "args": ["/absolute/path/to/capsule-crm-mcp-server/src/index.js"],
+      "args": ["/path/to/your/capsule-mcp-dom/src/index.js"],
+      "env": {
+        "CAPSULE_API_TOKEN": "your-capsule-api-token-here"
+      },
       "description": "Capsule CRM integration for managing contacts, opportunities, projects, and tasks"
     }
   }
